[gd_scene load_steps=7 format=3 uid="uid://b3u2ob2gato7t"]

[ext_resource type="PackedScene" uid="uid://m11ngetuthtg" path="res://scenes/player.tscn" id="1_6yceo"]
[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1_dvxnh"]
[ext_resource type="Script" path="res://scripts/camera_transition.gd" id="4_pvwy4"]
[ext_resource type="Script" path="res://scripts/trigger_room_transition.gd" id="5_dhtgg"]

[sub_resource type="TileSet" id="TileSet_s0iaa"]
physics_layer_0/collision_layer = 1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5oke7"]
size = Vector2(32, 8)

[node name="Main" type="Node2D"]

[node name="GameManager" type="Node" parent="."]
script = ExtResource("1_dvxnh")

[node name="TimerQuit" type="Timer" parent="GameManager"]
wait_time = 1.2
one_shot = true

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_s0iaa")
format = 2
layer_0/name = "Ground"
layer_1/name = "Obstacles"
layer_1/tile_data = PackedInt32Array(-65541, 917504, 7, -5, 917504, 8, 65531, 917504, 9, 131067, 917504, 10, 196603, 917504, 11, -131068, 917504, 7, -65532, 917504, 8, 4, 917504, 9, 65540, 917504, 10, 131076, 917504, 11, -262149, 917504, 6, -262148, 917504, 6, -262147, 917504, 6, -262146, 917504, 6, -262145, 917504, 6, -327680, 917504, 6, -327679, 917504, 6, -327678, 917504, 6, -327677, 917504, 6, -327676, 917504, 6, 327675, 917504, 6, 327676, 917504, 6, 327677, 917504, 6, 327678, 917504, 6, 262145, 917504, 6, 262146, 917504, 6, 262147, 917504, 6, 262148, 917504, 6, 262139, 917504, 11, 196612, 917504, 11, -196604, 917504, 11, -262140, 917504, 11, -131077, 917504, 11, -196613, 917504, 11, 393211, 917504, 8, 458747, 917504, 8, 524283, 917504, 8, 589819, 917504, 8, 655355, 917504, 8, 720891, 917504, 8, 786427, 917504, 8, 851963, 917504, 8, 917499, 917504, 8, 327684, 917504, 8, 393220, 917504, 8, 458756, 917504, 8, 524292, 917504, 8, 589828, 917504, 8, 655364, 917504, 8, 720900, 917504, 8, 786436, 917504, 8, 851972, 917504, 8, 917500, 917504, 8, 917501, 917504, 8, 917502, 917504, 8, 917503, 917504, 8, 851968, 917504, 8, 851969, 917504, 8, 851970, 917504, 8, 851971, 917504, 8)

[node name="Camera" type="Camera2D" parent="."]
position_smoothing_speed = 4.0
script = ExtResource("4_pvwy4")

[node name="Player" parent="." instance=ExtResource("1_6yceo")]
position = Vector2(-24, 24)
collision_layer = 3
collision_mask = 3

[node name="Transitions" type="Node" parent="."]

[node name="Area2D" type="Area2D" parent="Transitions"]
position = Vector2(0, 72)
collision_layer = 2
collision_mask = 2
script = ExtResource("5_dhtgg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Transitions/Area2D"]
shape = SubResource("RectangleShape2D_5oke7")
one_way_collision_margin = 0.0

[connection signal="timeout" from="GameManager/TimerQuit" to="GameManager" method="_on_timer_timeout"]
[connection signal="force_move_player" from="Camera" to="Player" method="_on_camera_force_move_player"]
[connection signal="check_new_tile" from="Player" to="Transitions/Area2D" method="_on_player_check_new_tile"]
[connection signal="body_entered" from="Transitions/Area2D" to="Transitions/Area2D" method="_on_body_entered"]
[connection signal="body_exited" from="Transitions/Area2D" to="Transitions/Area2D" method="_on_body_exited"]
[connection signal="camera_room_transition" from="Transitions/Area2D" to="Camera" method="_on_area_2d_camera_room_transition"]
